--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>Getting Started</title>
 
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript">
-      src="app.js"
-    </script>
+    <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
     <p>
